deploy.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: megadev-v1
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: megadev-v1
  labels: 
    tier: backend
spec: 
  selector:
    app: central-v1
    tier: backend
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: megadev-v1
  labels:
    tier: backend
spec:
  selector:
    matchLabels:
      app: central-v1
      tier: backend
  template:
    metadata:
      labels:
        app: central-v1
        tier: backend
    spec:
      containers:
      - name: api
        image: lugheri/api-central:v43
---
kind: Service
apiVersion: v1
metadata: 
  name: mysql
  namespace: megadev-v1
  labels:
    app: central-v1
spec:
  type: LoadBalancer
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector: 
    app: central-v1
    tier: mysql
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql
  namespace: megadev-v1
  labels:
    app: central-v1
spec:
  selector:
    matchLabels:
      app: central-v1
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: central-v1
        tier: mysql
    spec:
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvclaim
      containers:
      - image: mysql:5.6
        name: mysql
        livenessProbe:
          tcpSocket:
            port: 3306
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
  namespace: megadev-v1
  labels:
    tier: frontend
spec:
  selector:
    matchLabels:
      app: central-v1
      tier: frontend
  template:
    metadata:
      labels:
        app: central-v1
        tier: frontend
    spec:
      containers:
      - name: api
        image: mega10/frontendcentral:v21
---
kind: Service
apiVersion: v1
metadata: 
  name: front-srv
  namespace: megadev-v1
  labels:
    app: central-v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector: 
    app: central-v1
    tier: frontend
