deploy_backend.yaml
#Namespace
kind: Namespace
apiVersion: v1
metadata:
  name: megadev-v1
---
#Backend

#Backend Service
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: megadev-v1
  labels: 
    tier: backend
spec: 
  selector:
    app: central-v1
    tier: backend
  ports:
  - protocol: TCP
    port: 3000
  type: ClusterIP
---
#Deploy do Backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: megadev-v1
  labels:
    tier: backend
spec:
  selector:
    matchLabels:
      app: central-v1
      tier: backend
  template:
    metadata:
      labels:
        app: central-v1
        tier: backend
    spec:
      containers:
      - name: api
        image: megaconecta/api-central:v0.0.117
---
#Mysql
#Mysql service
kind: Service
apiVersion: v1
metadata: 
  name: mysql
  namespace: megadev-v1
  labels:
    app: central-v1
spec:
  type: LoadBalancer
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector: 
    app: central-v1
    tier: mysql
---
#Deploy Mysql 
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql
  namespace: megadev-v1
  labels:
    app: central-v1
spec:
  selector:
    matchLabels:
      app: central-v1
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: central-v1
        tier: mysql
    spec:
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvclaim
      containers:
      - image: mysql:5.6
        name: mysql
        livenessProbe:
          tcpSocket:
            port: 3306
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
---
#Asterisk
#Service PJSIP/IAX
#kind: Service
#apiVersion: v1
#metadata:
#    name: asterisk-sip
#    namespace: megadev-v1
#    #annotations:
#    #  service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
#    labels:
#        app: central
#spec:
#    ports:
#      - name: sip0
#        protocol: UDP
#        port: 5060       
#        targetPort: 5060 
#      - name: rtp0
#        protocol: UDP
#        port: 10000
#      - name: rtp1
#        protocol: UDP
#        port: 10001
#      - name: rtp2
#        protocol: UDP
#        port: 10002
#      - name: rtp3
#        protocol: UDP
#        port: 10003
#      - name: rtp4
#        protocol: UDP
#        port: 10004                 
#    selector:
#        app: central
#        tier: asterisk
#    type: LoadBalancer
#---
###kind: Service
###apiVersion: v1
###metadata:
###    name: asterisk-pjsip
###    namespace: megadev-v1
###    annotations:
###      service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
###    labels:
###        app: central
###spec:
###    ports:         
###      - name: pjsip
###        protocol: UDP
###        port: 65060      
###        targetPort: 5060  
###      - name: rtp0
###        protocol: UDP
###        port: 10000
###      - name: rtp1
###        protocol: UDP
###        port: 10001
###      - name: rtp2
###        protocol: UDP
###        port: 10002
###      - name: rtp3
###        protocol: UDP
###        port: 10003
###      - name: rtp4
###        protocol: UDP
###        port: 10004      
###    selector:
###        app: central
###        tier: asterisk
###    type: LoadBalancer
###---  
####Service PJSIP/IAX
###kind: Service
###apiVersion: v1
###metadata:
###    name: asterisk-iax
###    namespace: megadev-v1
###    labels:
###        app: central
###spec:
###    ports:      
###      - name: iax
###        protocol: UDP
###        port: 64569
###        targetPort: 4569      
###    selector:
###        app: central
###        tier: asterisk
###    type: ClusterIP
###---
####SERVICE HTTP
###kind: Service
###apiVersion: v1
###metadata:
###    name: asterisk-http
###    namespace: megadev-v1
###    labels:
###        app: central
###spec:
###    ports:
###      - name: http
###        protocol: TCP
###        port: 8088
###        targetPort: 8088
###      #
###      #- name: manager
###      #  protocol: TCP
###      #  port: 5038
###      #  targetPort: 5038  
###    selector:
###        app: central
###        tier: asterisk
###    type: ClusterIP
###---
####SERVICE HTTPS
###kind: Service
###apiVersion: v1
###metadata:
###    name: asterisk-https
###    namespace: megadev-v1
###    labels:
###        app: central
###spec:
###    ports:     
###      - name: https
###        protocol: TCP
###        port: 8089
###        targetPort: 8089      
###    selector:
###        app: central
###        tier: asterisk
###    type: ClusterIP
---

#Frontend
#Front End Deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
  namespace: megadev-v1
  labels:
    tier: frontend
spec:
  selector:
    matchLabels:
      app: central-v1
      tier: frontend
  template:
    metadata:
      labels:
        app: central-v1
        tier: frontend
    spec:
      containers:
      - name: api
        image: mega10/frontendcentral:v50
---
#front service
kind: Service
apiVersion: v1
metadata: 
  name: front-srv
  namespace: megadev-v1
  labels:
    app: central-v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector: 
    app: central-v1
    tier: frontend

#Certificados 
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress
    namespace: megadev-v1
    annotations:
        kubernetes.io/ingress.class: "nginx"  
        cert-manager.io/issuer: letsencrypt-prod
        nginx.ingress.kubernetes.io/proxy-body-size: 512m
        
spec: 
  tls:
  - hosts:
    - mega-pbx.megaconecta.tec.br
    - mega-api.megaconecta.tec.br
###    - mega-ari.megaconecta.tec.br
###    - mega-sip.megaconecta.tec.br
###    - mega-wss.megaconecta.tec.br
    secretName: mega-pbx-tls
  rules: 
    - host: mega-api.megaconecta.tec.br
      http: 
        paths: 
          - path: /
            backend: 
                serviceName: api-svc
                servicePort: 3000
    - host: mega-pbx.megaconecta.tec.br
      http: 
        paths: 
          - path: /
            backend: 
                serviceName: front-srv
                servicePort: 80
###    - host: mega-sip.megaconecta.tec.br
###      http: 
###        paths: 
###          - path: /
###            backend: 
###              serviceName: asterisk-sip
###              servicePort: 5060
###    - host: mega-ari.megaconecta.tec.br
###      http: 
###        paths: 
###          - path: /
###            backend: 
###              serviceName: asterisk-http
###              servicePort: 8088  
###    - host: mega-wss.megaconecta.tec.br
###      http: 
###        paths: 
###          - path: /
###            backend: 
###              serviceName: asterisk-https
###              servicePort: 8089          
###    - host: mega-pbx.megaconecta.tec.br
###      http: 
###        paths: 
###          - path: /
###            backend: 
###              serviceName: asterisk-http
###              servicePort: 5038 
###
