deploy_dev.yaml
#Namespace
kind: Namespace
apiVersion: v1
metadata:
  name: megadev-pbx
---
#Backend
#Backend Service
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: megadev-pbx
  labels: 
    tier: backend
spec: 
  selector:
    app: central-v1
    tier: backend
  ports:
  - protocol: TCP
    port: 3000
  type: ClusterIP
---
#Deploy do Backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: megadev-pbx
  labels:
    tier: backend
spec:
  #replicas: 3
  selector:
    matchLabels:
      app: central-v1
      tier: backend
  template:
    metadata:
      labels:
        app: central-v1
        tier: backend
    spec:      
      containers:
      - name: api
        image: megaconecta/api-central:v0.0.447
        #resources:
        #  limits:
        #    cpu: 0.1m
        #    memory: 300Mi   
        #  requests:
        #    memory: 300Mi
---
#apiVersion: autoscaling/v1
#kind: HorizontalPodAutoscaler
#metadata:
#  name: backend-scaler
#  namespace: megadev-pbx
#spec:
#  scaleTargetRef:
#    kind: Deployment
#    name: api-deploy    
#  minReplicas: 2
#  maxReplicas: 10
#  targetCPUUtilizationPercentage: 50
#---
#Frontend
#Front End Deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
  namespace: megadev-pbx
  labels:
    tier: frontend
spec:
  selector:
    matchLabels:
      app: central-v1
      tier: frontend
  template:
    metadata:
      labels:
        app: central-v1
        tier: frontend
    spec:
      containers:
      - name: api
        image: megaconecta/frontendcentral:v116
---
#front service
kind: Service
apiVersion: v1
metadata: 
  name: front-srv
  namespace: megadev-pbx
  labels:
    app: central-v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector: 
    app: central-v1
    tier: frontend

#Certificados 
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress
    namespace: megadev-pbx
    annotations:
        kubernetes.io/ingress.class: "nginx"  
        cert-manager.io/issuer: letsencrypt-prod
        nginx.ingress.kubernetes.io/proxy-body-size: 512m
spec: 
  tls:
  - hosts:
    - desenvolvimento.cloudcall.tec.br
    - dev-api.cloudcall.tec.br
    secretName: megapbx-prod-tls
  rules: 
    - host: dev-api.cloudcall.tec.br
      http: 
        paths: 
          - path: /
            backend: 
                serviceName: api-svc
                servicePort: 3000
    - host: desenvolvimento.cloudcall.tec.br
      http: 
        paths: 
          - path: /
            backend: 
                serviceName: front-srv
                servicePort: 80
