deploy_testemassivo.yaml
#Namespace
kind: Namespace
apiVersion: v1
metadata:
  name: megadev-massive-v1
---
#Backend Services
#API
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: megadev-massive-v1
  labels: 
    tier: backend
spec: 
  selector:
    app: central-massive-v1
    tier: backend
  ports:
  - protocol: TCP
    port: 3000
  type: ClusterIP
---
#Front service
kind: Service
apiVersion: v1
metadata: 
  name: front-srv
  namespace: megadev-massive-v1
  labels:
    app: central-massive-v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector: 
    app: central-massive-v1
    tier: frontend
---
##CREDENCIAIS SQL
#secretGenerator:
#- name: bd-auth
#  namespace: megadev-massive-v1
#    literals:
#    - username=root
#    - password=M3g4_devDB@2021
#    - database=mega_conecta
---
#Deploy
#API Deploy 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: megadev-massive-v1
  labels:
    tier: backend
spec:
  selector:
    matchLabels:
      app: central-massive-v1
      tier: backend
  template:
    metadata:
      labels:
        app: central-massive-v1
        tier: backend
    spec:
      volumes:
        - name: sa-secret-volum
          secret: 
            secretName: sa-secret
      containers:
      - name: api
        image: megaconecta/api-central-db:v0.0.5
      - name: cloud-sql-proxy
        # It is recommended to use the latest version of the Cloud SQL proxy
        # Make sure to update on a regular schedule!
        image: gcr.io/cloudsql-docker/gce-proxy:1.17
        command:
          - "/cloud_sql_proxy"

          # If connecting from a VPC-native GKE cluster, you can use the
          # following flag to have the proxy connect over private IP
          # - "-ip_address_types=PRIVATE"

          # Replace DB_PORT with the port the proxy should listen on
          # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
          - "-instances=desenvolvimento-272718:us-central1:megadesenvolvimento-db=tcp:3306"
          - "-credential_file=/secrets/service_account.json"
        securityContext:
          # The default Cloud SQL proxy image runs as the
          # "nonroot" user and group (uid: 65532) by default.
          runAsNonRoot: true
        # Resource configuration depends on an application's requirements. You
        # should adjust the following values based on what your application
        # needs. For details, see https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
        volumeMounts:
        - name: sa-secret-volum
          mountPath: /secrets/
          readOnly: true
---
#Front Deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
  namespace: megadev-massive-v1
  labels:
    tier: frontend
spec:
  selector:
    matchLabels:
      app: central-massive-v1
      tier: frontend
  template:
    metadata:
      labels:
        app: central-massive-v1
        tier: frontend
    spec:
      containers:
      - name: api
        image: megaconecta/frontendcentral:v64
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress
    namespace: megadev-massive-v1
    annotations:
        kubernetes.io/ingress.class: "nginx"  
        cert-manager.io/issuer: letsencrypt-prod
        nginx.ingress.kubernetes.io/proxy-body-size: 512m
        
spec: 
  tls:
  - hosts:
    - junior.cloudcall.tec.br
    - junior-api.cloudcall.tec.br
    secretName: megapbx-prod-tls
  rules: 
    - host: junior-api.cloudcall.tec.br
      http: 
        paths: 
          - path: /
            backend: 
                serviceName: api-svc
                servicePort: 3000
    - host: junior.cloudcall.tec.br
      http: 
        paths: 
          - path: /
            backend: 
                serviceName: front-srv
                servicePort: 80
